test/errors/type/str/tolower.yasl
mt.lookup('', .tolower)(1)
